# encrypted-dns-proxy-rs

./: Cargo.toml  README.md
src/: config_resolver.rs  main.rs
src/config/: xor.rs
src/examples/: forwarder.rs
